# api

./: .env.example  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  README_RU.md  REDIS_CELERY.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  deploy.yml
.qoder/quests/: generate-fastapi-project.md
alembic/: env.py  script.py.mako
app/: main.py
app/api/: deps.py  router.py
app/core/: celery_app.py  config.py  email.py  jwt.py  rate_limiter.py  redis.py  security.py
app/db/: base.py  models.py  session.py
app/di/: container.py
app/domain/auth/: repository.py  router.py  schemas.py  service.py
app/domain/messages/: models.py  repository.py  router.py  schemas.py  service.py  templates.py
app/domain/notifications/: enums.py  models.py  pubsub.py  repository.py  router.py  schemas.py  service.py
app/domain/profiles/: models.py  repository.py  router.py  schemas.py  service.py
app/domain/users/: enums.py  models.py  policies.py  repository.py  router.py  schemas.py  service.py
app/tasks/: message_tasks.py  notification_tasks.py
app/utils/: crypto.py  exceptions.py
docs/: index.md  index_ru.md
examples/: notification_listener.py  send_notification.py
scripts/: code-quality.sh  init-dev.sh  start_workers.sh  test-coverage.sh  verify-setup.sh
tests/: conftest.py  test_auth.py  test_messages.py  test_notifications.py  test_profiles.py  test_users.py
