[metadata]
description-file = README.md

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .nox,
    .mypy_cache,
    .pytest_cache,
    .ruff_cache

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --strict-config
asyncio_mode = auto

[mypy]
python_version = 3.11
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[mypy-tests.*]
ignore_errors = true